# DonkeyFeed

./: README.md  RSS_parse.py  gui.py  main.py  play.py  pyproject.toml  readme.md
main/: RSS feed filters.json  RSS_parse.py  cleanup.py  command_prompt.py  config.ini  config.py  database.py  donkeyfeed.py  gui.py  main.py  rss_roster.py  styles.py  subscriptions.xml  ui.py
main/tests/: test_command_prompt.py
main/user/: RSS feed filters.json  rss_manager.csv  saved_feed_filters.csv  test RSS.csv
main/user/search_results/: 2024_01_29_1722.html  2024_01_30_1845.html  2024_01_30_1852.html  2024_02_04_0920.html  2024_02_10_1031.html  2024_02_11_2105.html  2024_02_11_2237.html  2024_02_12_1254.html  2024_02_23_1029.html  2024_02_26_1043.html  Google News Technology2024_02_12_1317.html  Google News Technology2024_02_12_1334.html  Google News Technology2024_02_12_1341.html  Google News Technology2024_02_12_1345.html  Google News Technology2024_02_13_1137.html  Peter Krupa dot lol2024_02_15_0912.html  everything_2024_02_15_1217.html  everything_2024_02_15_1220.html  (+7 more)
src/: RSS_parse.py  cleanup.py  cluster_manager.py  command_prompt.py  config.ini  donkeyfeed.py  donkeyfeed.spec  gui.py  new_command_test.py  rss_roster.py  scrap_pile.py  styles.py  ui.py  utilities.py
src/user/: RSS feed filters.json  ai chatter.csv  general.csv  keyword clusters.json  schema-timestamps.json  timestamps.json
tests/: play.py  test.txt  test_RSS_parse.py  test_command_prompt.py  test_database.py
tests/test_files/: 20240127_140234.html  20240127_140653.html  20240127_140952.html
(+12 files in other folders)
